--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,34 @@
 <form (ngSubmit)="login()" #myForm="ngForm"> 
 
+
     <!--欄位標籤 -->
     <div class="form-group">   
+
+        <!--label提示字-->
       <label class="form-label">帳號</label> 
+
         <!--雙向繫節 -> [()]  -->
         <!--input type是調整輸入框的文字屬性-->
       <input type="text" [(ngModel)]="account"  name="account" class="form-control">
+    
     </div>
     
+
      <!--欄位標籤 -->
-    <div class="form-group">   
+    <div class="form-group">  
+
       <label class="form-label">密碼</label>
+
         <!--雙向繫節 -> [()]  -->
         <!--input type是調整輸入框的文字屬性-->
       <!--name是input的名字，用來查詢這個欄位的規則用 ; ngModel是綁定的屬性-->
       <input type="password" [(ngModel)]="password"  name="password" class="form-control">
+    
     </div>  
+
     
       <!-- 送出按鈕 --> 
-      <button class="btn" type="submit">送出</button> 
+      <button class="btn btn-primary" type="submit">登入</button> 
+
+
     </form>
